[package]
name = "testnRFi2c"
version = "0.1.0"
authors = ["Nihal Pasham <nihal.pasham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nrf52840-hal = "0.10.0"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"

[features]
rt = ["nrf52840-hal/rt"]
default = ["rt"]

[profile.release]
debug = true
